# get-research-done

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.grd/: experiments.md  journal.md  state.md
.grd/hypotheses/: 20260213-065231-solo-speed-hypothesis.md
.grd/templates/: papers.csv  patch-review.md  prompt-index.md  research-notes.md
.grd/workflows/: research-pipeline.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
agy/workflows/: research-pipeline.md
codex/workflows/: research-pipeline.md
scripts/: check_questioning_policy.py  check_skill_lengths.py  check_skill_references.py  install.ps1  install.sh  sync_agy_wrappers.py  sync_codex_wrappers.py  sync_skill_boilerplate.py
skills/_shared/: BASE.md  COMMON_BLOCKS.md  skill-profiles.json
skills/grd-ablation-recommender/: SKILL.md  SKILL.src.md
skills/grd-algo-implementer/: SKILL.md  SKILL.src.md
skills/grd-algo-verifier/: SKILL.md  SKILL.src.md
skills/grd-attribution-and-robustness/: SKILL.md  SKILL.src.md
skills/grd-build-architect/: SKILL.md  SKILL.src.md
skills/grd-codebase-mapper/: SKILL.md  SKILL.src.md
skills/grd-data-auditor/: SKILL.md  SKILL.src.md
skills/grd-evaluation-analyst/: SKILL.md
skills/grd-evaluation-suite/: SKILL.md  SKILL.src.md
templates/: deep-question.md  lit-review.md  prompt-card.md  research-artifact-format.md  research-notes.md  roadmap.md  run-index.md  state.md
workflows/: research-pipeline.md
(+147 files in other folders)
